# try_jinja

./: .env  .gitignore  Cargo.toml  README.md  build.rs  make.toml  package.json  pnpm-lock.yaml  sqlite.db  test.db
data.ms/: instance-uid
data.ms/auth/: data.mdb  lock.mdb
data.ms/tasks/: lock.mdb
js/: benchmark.js  drain.js  test.js
migrations/2024-01-05-153111_create_package/: down.sql  up.sql
script/: css.sh
src/: api.rs  db.rs  main.rs  models.rs  page.rs  schema.rs
static/lib/: test.js
static/old/: bundlet.css  style.css.map
static/style/: global.css  global.css.map  style.css
static/style/bundle.css/: global2.css
style/: global.css
templates/: base.html
templates/comp/: hybrid.html
