[package]
name = "try_jinja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-htmx = "0.3.0"
actix-http = "3.6.0"
actix-router = "0.5.2"
actix-rt = "2.9.0"
actix-server = "2.3.0"
actix-session = "0.9.0"
actix-web = { version = "4.5.1" }
actix-web-lab = { version = "0.20.2", features = ["actix-files"] }
anyhow = "1.0.79"
awc = "3.4.0"
chrono = "0.4.34"
clickhouse = "0.11.6"
config = "0.14.0"
couchdb = "0.6.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.11"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "sqlite"] }
dotenvy = "0.15.7"
duckdb = "0.9.2"
flate2 = "1.0.28"
futures = "0.3.30"
futures-util = "0.3.30"
html-node = "0.5.0"
http = "1.0.0"
hypertext = "0.5.0"
image = "0.24.8"
itertools = "0.12.1"
lambda-events = "0.0.0"
lambda-extension = "0.9.0"
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
libsql-client = { version = "0.33.4", features = ["http", "bytes", "futures-util"] }
lightningcss = "1.0.0-alpha.53"
lightningcss-derive = "1.0.0-alpha.42"
listenfd = "1.0.1"
log = "0.4.20"
markdown-rs = "0.1.0"
maud = { version = "0.26.0", features = ["actix-web"] }
mdxjs = "0.1.23"
minijinja = { version = "1.0.12", features = [
  "json",
  "urlencode",
  "v_htmlescape",
  "loader",
  "fuel",
  "unicode",
] }
minijinja-autoreload = "1.0.12"
minijinja-embed = "1.0.12"
moka = { version = "0.12.5", features = ["future", "sync", "log"] }
openssl = { version = "0.10.63", features = ["v110"] }
parking_lot = "0.12.1"
pulldown-cmark = "0.10.0"
r2d2 = "0.8.10"
rad = "0.5.0"
rand = "0.8.5"
reqwest = "0.11.24"
#reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sonic-rs = "0.3.2"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "sqlite",
] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.8.10"
tracing-subscriber = "0.3.18"
ureq = { version = "2.9.5", features = ["json"] }
url = "2.5.0"
uuid = "1.7.0"
zstd = "0.13.0"
