[package]
name = "try_jinja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["diesel", "openssl"]

#bundled = []# clickhouse-db = ["clickhouse"]
# aws = [
#   "lambda-events",
#   "lambda_http",
#   "lambda_runtime",
#   "lambda-extension",
#   "libsql-client",
# ]
# couch_db = ["couchdb"]
# curl_http = ["curl"]
diesel_db = ["diesel"]
# sqlx_db = ["sqlx"]
# duck_db = ["duckdb"]
htmx = ["actix-htmx", "html-node", "hypertext"]
# markdown = ["mdxjs", "markdown-rs"]
# cache = ["moka"]

[dependencies]
html-node = { version = "*", optional = true }
actix = { version = "0.13.3" }
actix-files = "0.6.5"
actix-htmx = { optional = true }
actix-http = "3.6.0"
actix-router = { optional = true, version = "0.5.2" }
actix-rt = { optional = true }
actix-server = "2.3.0"
actix-session = "0.9.0"
actix-web = { version = "4.5.1" }
actix-web-lab = { version = "0.20.2", features = ["actix-files"] }
anyhow = "1.0.79"
# awc = { optional = true, version = "3.4.0" }
chrono = "0.4.34"
# clickhouse = { optional = true }
# config = "0.14.0"
# couchdb = { optional = true }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.11"
# curl = { optional = true }
diesel = { version = "2.1.4", features = [
  "postgres",
  "r2d2",
  "sqlite",
], optional = true }
dotenvy = "0.15.7"
# duckdb = { optional = true }
# flate2 = "1.0.28"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.0.0"
hypertext = { version = "*", optional = true }

# image = { optional = true, version = "0.24.8" }
itertools = "0.12.1"
# lambda-events = { version = "0.0.0", optional = true }
#
# lambda-extension = { version = "0.9.0", optional = true }
#
# lambda_http = { version = "*", optional = true }
#
# lambda_runtime = { version = "*", optional = true }
#
# markdown-rs = { version = "0.1.0", optional = true }
# libsql-client = { version = "0.33.4", features = [
#   "http",
#   "bytes",
#   "futures-util",
# ], optional = true }
# lightningcss = { optional = true, version = "1.0.0-alpha.53" }
# lightningcss-derive = { optional = true, version = "1.0.0-alpha.42" }
listenfd = "1.0.1"
log = "0.4.20"

maud = { version = "0.26.0", features = ["actix-web"] }
# mdxjs = { version = "0.1.23", optional = true }
#
# reqwest = { version = "0.11.24", features = ["blocking"], optional = true }
minijinja = { version = "1.0.12", features = [
  "json",
  "urlencode",
  "v_htmlescape",
  "loader",
  "fuel",
  "unicode",
] }
minijinja-autoreload = "1.0.12"
minijinja-embed = "1.0.12"
# moka = { version = "0.12.5", features = [
#   "future",
#   "sync",
#   "log",
# ], optional = true }
openssl = { version = "0.10.63", features = ["v110"], optional = true }
parking_lot = "0.12.1"
# pulldown-cmark = { optional = true }
r2d2 = "0.8.10"
# rad = { optional = true }
# rand = { optional = true, version = "*" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
# sonic-rs = { optional = true, version = "0.3.2" }
# sqlx = { version = "0.7.3", features = [
#   "runtime-tokio-rustls",
#   "postgres",
#   "sqlite",
# ], optional = true }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.8.10"
tracing-subscriber = "0.3.18"
# ureq = { version = "2.9.5", features = ["json"], optional = true }
url = "2.5.0"
uuid = "1.7.0"
zstd = "0.13.0"
once_cell = "1.19.0"
tera = "1.19.1"
indicatif = "0.17.8"
#tera = "1.19.1"
#askama = { version = "0.12.1", features = ["with-actix-web"] }
